--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a{
 .flex-container-footer{
     display: flex;
     flex-direction: in-line;
-    background-color: #9FBD9A;
+    background-color: #396346;
     font-family: 'Jaldi', sans-serif;
     font-size: 25px;
     padding: 10px;
@@ -311,8 +311,10 @@ h4{
 
 
 h2{
-    font-size: 20px;
+    font-size: 25px;
     margin-top:0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h3{
@@ -338,8 +340,23 @@ h4{
 
 #about{ 
     font-size: 20px;
+    left: 70px;
 
 }
+
+#insta{
+    position: absolute;
+    right: 0px;
+    padding-right: 30px;
+
+}
+
+#facebook{
+    position: absolute;
+    right: 100px;
+
+}
+
 
 }
 
