--- a/css/style.css
+++ b/css/style.css
@@ -361,3 +361,120 @@ h4{
 }
 
 
+/* ---------------tablet --------------*/
+
+@media (max-width: 768px) and (max-height: 612px) {
+    .flex-container-header {
+         display: none;
+     
+
+      
+     }
+
+     .mobile-container {
+        max-width: 480px;
+        margin: auto;
+        background-color: #9FBD9A;
+        height: 500px;
+        border-radius: 50px;
+        display: block;
+        padding-bottom: 20px;
+      }
+      
+    
+      
+      .topnav #myLinks {
+        display: none;
+      }
+      
+      .topnav a {
+        color: black;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-family: 'Jaldi', sans-serif;
+        font-size: 17px;
+        display: block;
+        background-color: #9FBD9A;
+      }
+      
+      .topnav a.icon {
+       background-color: #9FBD9A;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      
+      .topnav a:hover {
+        background-color: #9FBD9A;
+       
+      }
+      
+      .active {
+    
+        color: #F2F0EB;
+      }
+
+
+.flex-container{
+    width: 100%;
+    height: 80vh;}
+
+
+      h1{
+        font-size: 80px;
+        margin-top: auto;
+      }
+
+
+h2{
+    font-size: 25px;
+    margin-top:0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h3{
+    font-size: 15px;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    justify-content: center;
+}
+
+
+h4{
+    font-size: 20px;
+    margin-top: auto;
+    padding-left: auto;
+}
+
+#home{
+    font-size: 20px;
+}
+
+#about{ 
+    font-size: 20px;
+    left: 70px;
+
+}
+
+#insta{
+    position: absolute;
+    right: 0px;
+    padding-right: 30px;
+
+}
+
+#facebook{
+    position: absolute;
+    right: 100px;
+
+}
+
+
+}
+
+
