--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ canvas{
 .flex-container-header{
     display: flex;
     flex-direction: in-line;
-    background-color: #9FBD9A;
+    background-color: #F0E4D0;
     font-family: 'Jaldi', sans-serif;
     font-size: 22px;
     padding: 10px;
@@ -28,11 +28,16 @@ a{
    
 }
 
+#logo{
+    width: 20%;
+    height: 30vh;
+    margin-top: 5px;
+}
 
 .flex-container-footer{
     display: flex;
     flex-direction: in-line;
-    background-color: #396346;
+    background-color: #1f3d1f;
     font-family: 'Jaldi', sans-serif;
     font-size: 25px;
     padding: 10px;
@@ -92,6 +97,10 @@ a{
     border-radius: 5px;
 }
 
+#insta{
+    display: flex;
+    flex-wrap: nowrap;
+}
 
 
 .flex-container{
@@ -103,7 +112,7 @@ a{
     align-items: center;
     /* border: solid black;
     border-radius: 20px; */
-    /* background-color: #9FBD9A; */
+    background-color: #F0E4D0;
 
    
 }
@@ -112,11 +121,12 @@ h1{
     font-family: 'Notable', sans-serif;
     font-size: 80px;
     letter-spacing: .2rem;
-    color: #396346;
+    color: #1f3d1f;
     margin-top: 100px;
     display: flex;
     align-items: center;
     text-align: center;
+    flex-wrap: wrap;
 
     
 }
@@ -128,10 +138,11 @@ h2{
     padding-bottom: 40px;
     justify-content: center;
     padding-left: 20px;
+    flex-wrap: wrap;
 
    
     
-    color: black;
+    color: #1f3d1f;
 
     
 }
@@ -139,11 +150,11 @@ h2{
 h3{
     font-family: 'Notable', sans-serif;
     font-size: 60px;
-   color: #396346;
+   color: #1f3d1f;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
+    margin-top: auto;
     margin-bottom: 0px;
     
 
@@ -174,7 +185,11 @@ h4{
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color:#D6A441
+    border: solid #1f3d1f;
+   box-shadow: 30px 10px #1f3d1f;
+   padding-bottom: 100px;
+   margin-bottom: 100px;
+    /* background-color:#D6A441 */
     
 
 }
@@ -185,14 +200,31 @@ h4{
   width: 80%;
   height: 80vh;
   justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 20px;
+  /* padding-top: 40px;
+  padding-bottom: 20px; */
 }
 
-#logo{
-    width: 20%;
-    height: 20vh;
-}
+div.scrollmenu {
+    
+    overflow: auto;
+    white-space: nowrap;
+    margin-bottom: 100px;
+  }
+  
+  div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+    margin-bottom: 100px;
+  }
+  
+  div.scrollmenu a:hover {
+    background-color: #777;
+  }
+  
+
 
 
 .flex-container2{
@@ -226,6 +258,23 @@ h4{
     margin-left: auto;
     margin-right: auto;
    
+    color: #F0E4D0;
+}
+
+.flex-container4{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    height: 100%;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  margin-bottom: 100px;
+    padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+   border: solid #1f3d1f;
+   box-shadow: 30px 10px #1f3d1f;
     color: #F0E4D0;
 
 }
@@ -272,7 +321,18 @@ h4{
   }
 
 
+  p{
+    color: #F2F0EB;
+  }
 
+.flex-item-hours{
+    font-size: 16px;
+    color: #F2F0EB;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: "Space Mono", sans-serif;
+
+}
 
 
 /* Media Queries */
@@ -338,6 +398,7 @@ h4{
       .active {
     
         color: #F0E4D0;
+        font-size: 12px;
       }
 
 
@@ -347,7 +408,7 @@ h4{
 
 
       h1{
-        font-size: 40px;
+        font-size: 26px;
         margin-top: auto;
       }
 
