--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,30 @@ body{
 canvas{
     display:block;
 }
+* {
+  box-sizing: border-box;
+}
+
+.parent-container {
+  width: 100%;
+}
+
 
 
 .flex-container-header{
     display: flex;
     flex-direction: in-line;
-    background-color: #F0E4D0;
+    background-color: #1f3d1f;
     font-family: 'Jaldi', sans-serif;
     font-size: 22px;
     padding: 10px;
-    height: 50px;
+    height: 40%;
     width: 100%;
-    padding-top: 10px;
+    padding-top: 20px;
     justify-content: center;
+    justify-content: space-around;
+   
+   
 
    
 }
@@ -51,6 +62,7 @@ a{
 #home{
    /* position:absolute; */
     padding: 10px;
+    
    
    
 }
@@ -112,16 +124,25 @@ a{
     align-items: center;
     /* border: solid black;
     border-radius: 20px; */
-    background-color: #F0E4D0;
+    background-color: #1f3d1f;
+    font-family: 'louiseregular';
 
    
 }
 
+@font-face {
+  font-family: 'louiseregular';
+  src: url('../media/fonts/louise-regular-webfont.woff2') format('woff2'),
+       url('../media/fonts/louise-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 h1{
-    font-family: 'Notable', sans-serif;
-    font-size: 80px;
-    letter-spacing: .2rem;
-    color: #1f3d1f;
+  font-family: 'louiseregular';
+    font-size: 100px;
+    color: #f8f6eb;
     margin-top: 100px;
     display: flex;
     align-items: center;
@@ -132,23 +153,24 @@ h1{
 }
 
 h2{
-    font-family: 'Unica One', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
     font-size: 30px;
-    margin-top: -40px;
-    padding-bottom: 40px;
+    margin-top: -70px;
+    padding-bottom: 60px;
     justify-content: center;
     padding-left: 20px;
     flex-wrap: wrap;
 
    
     
-    color: #1f3d1f;
+    color: #f8f6eb;
 
     
 }
 
 h3{
-    font-family: 'Notable', sans-serif;
+  font-family: 'louiseregular';
     font-size: 60px;
    color: #1f3d1f;
     justify-content: center;
@@ -156,19 +178,25 @@ h3{
     margin-right: auto;
     margin-top: auto;
     margin-bottom: 0px;
+   
+
     
 
 }
 
 h4{
-    font-family: 'Space Mono', sans-serif;
-    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
     color: black;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
     margin-bottom: auto;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 
 }
 
@@ -181,27 +209,20 @@ h4{
 }
 
 .flex-container3{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    border: solid #1f3d1f;
-   box-shadow: 30px 10px #1f3d1f;
-   padding-bottom: 100px;
-   margin-bottom: 100px;
-    /* background-color:#D6A441 */
-    
+ width: 100%;
+
+   background-color: orangered;
 
 }
+
 
 #coffee{
     margin-left: auto;
     margin-right: auto;
-  width: 80%;
-  height: 80vh;
+  width: 100%;
+  height: 110vh;
   justify-content: center;
-  /* padding-top: 40px;
-  padding-bottom: 20px; */
+
 }
 
 div.scrollmenu {
@@ -227,39 +248,10 @@ div.scrollmenu {
 
 
 
-.flex-container2{
-    display: block;
-    flex-direction: column;
-    width: 80%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    
-   
-
-}
 
 
-.flex-container3{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    height: 100%;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-   
-    color: #F0E4D0;
-}
+
+
 
 .flex-container4{
     display: flex;
@@ -276,6 +268,7 @@ div.scrollmenu {
    border: solid #1f3d1f;
    box-shadow: 30px 10px #1f3d1f;
     color: #F0E4D0;
+    margin-top: 50px;
 
 }
 
