--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,17 @@ canvas{
     display: flex;
     flex-direction: in-line;
     background-color: #1f3d1f;
-    font-family: 'Jaldi', sans-serif;
-    font-size: 22px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 20px;
     padding: 10px;
     height: 40%;
     width: 100%;
     padding-top: 20px;
     justify-content: center;
     justify-content: space-around;
+    margin-left: auto;
+    margin-right: auto;
    
    
 
@@ -35,15 +38,11 @@ canvas{
 
 a{
     text-decoration: none;
-    color: black;
+    color: #F0E4D0;
    
 }
 
-#logo{
-    width: 20%;
-    height: 30vh;
-    margin-top: 5px;
-}
+
 
 .flex-container-footer{
     display: flex;
@@ -209,9 +208,12 @@ h4{
 }
 
 .flex-container3{
- width: 100%;
+ display: flex;
+ flex-direction: column;
+ margin-top: 50px;
+  width: 100%;
 
-   background-color: orangered;
+   
 
 }
 
@@ -219,9 +221,13 @@ h4{
 #coffee{
     margin-left: auto;
     margin-right: auto;
-  width: 100%;
-  height: 110vh;
+  width: 80%;
+  height: 80vh;
   justify-content: center;
+  border: solid black;
+  box-shadow: 50px 30px #1f3d1f;
+  object-fit: cover;
+  object-position: 50% 50%;
 
 }
 
@@ -230,6 +236,7 @@ div.scrollmenu {
     overflow: auto;
     white-space: nowrap;
     margin-bottom: 100px;
+    background-color:#1f3d1f;
   }
   
   div.scrollmenu a {
@@ -266,9 +273,9 @@ div.scrollmenu {
     margin-left: auto;
     margin-right: auto;
    border: solid #1f3d1f;
-   box-shadow: 30px 10px #1f3d1f;
+   box-shadow: 50px 20px #1f3d1f;
     color: #F0E4D0;
-    margin-top: 50px;
+    margin-top: 100px;
 
 }
 
