--- a/css/style.css
+++ b/css/style.css
@@ -38,25 +38,12 @@ canvas{
 
 a{
     text-decoration: none;
-    color: #F0E4D0;
+    color: #f8f6eb;
    
 }
 
 
 
-.flex-container-footer{
-    display: flex;
-    flex-direction: in-line;
-    background-color: #1f3d1f;
-    font-family: 'Jaldi', sans-serif;
-    font-size: 25px;
-    padding: 10px;
-    height: 30%;
-    width: 100%;
-    color: #F0E4D0;
-  
-   
-}
 
 #home{
    /* position:absolute; */
@@ -199,6 +186,11 @@ h4{
 
 }
 
+h5{
+  font-family: "Space Mono", sans-serif;
+  font-size: 16px;
+  margin-bottom: 0px;
+}
 
 .flex-container2{
     display: flex;
@@ -256,6 +248,19 @@ div.scrollmenu {
 
 
 
+  .flex-container-footer{
+    display: flex;
+    flex-direction: in-line;
+    background-color: #1f3d1f;
+    font-size: 25px;
+    padding: 10px;
+    height: 30%;
+    width: 100%;
+    color: #f8f6eb;
+    
+  
+   
+}
 
 
 
@@ -274,7 +279,7 @@ div.scrollmenu {
     margin-right: auto;
    border: solid #1f3d1f;
    box-shadow: 50px 20px #1f3d1f;
-    color: #F0E4D0;
+    color: #f8f6eb;
     margin-top: 100px;
 
 }
@@ -295,7 +300,7 @@ div.scrollmenu {
   }
   
   .topnav a {
-    color: #F2F0EB;
+    color: #f8f6eb;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -303,7 +308,7 @@ div.scrollmenu {
   }
   
   .topnav a.icon {
-   background-color: #F0E4D0;
+   background-color: #f8f6eb;
     display: none;
     position: absolute;
     right: 0;
@@ -311,26 +316,64 @@ div.scrollmenu {
   }
   
   .topnav a:hover {
-    background-color: #F2F0EB;
+    background-color: #f8f6eb;
    
   }
   
   .active {
 
-    color: #F2F0EB;
+    color: #f8f6eb;
   }
 
 
   p{
-    color: #F2F0EB;
+    color: #f8f6eb;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    
   }
 
 .flex-item-hours{
+  display: flex;
+  flex-direction: column;
     font-size: 16px;
-    color: #F2F0EB;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-family: "Space Mono", sans-serif;
+    width: 40%;
+    height: 100%;
+    color: #f8f6eb;
+    /* margin-top: 20px;
+    margin-bottom: 20px; */
+    
+   
+ 
+    
+
+}
+
+.flex-item-hours2{
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+    height: 100%;
+  font-size: 16px;
+  color: #F2F0EB;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  
+
+
+}
+
+.flex-item-hours3{
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  height: 100%;
+  font-size: 16px;
+  color: #F2F0EB;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  
+
 
 }
 
@@ -374,7 +417,7 @@ div.scrollmenu {
         color: black;
         padding: 14px 16px;
         text-decoration: none;
-        font-family: 'Jaldi', sans-serif;
+        font-family: 'louiseregular', sans-serif;
         font-size: 17px;
         display: block;
      
