--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ h4{
     margin-bottom: auto;
     padding-bottom: 10px;
     padding-left: 30px;
-    padding-right: 10px;
+    padding-right: 30px;
 
 }
 
@@ -312,6 +312,7 @@ div.scrollmenu {
     width: 100%;
     color: #f8f6eb;
     bottom: 0;
+    justify-content: space-around;
     /* position: fixed; */
    
    
@@ -344,7 +345,7 @@ div.scrollmenu {
 .mobile-container {
     max-width: 480px;
     margin: auto;
-   background-color: #396346;
+   background-color: #1f3d1f;
     height: 500px;
     border-radius: 10px;
     display: none;
@@ -468,7 +469,7 @@ div.scrollmenu {
   flex-direction:column;
   width: 50%;
   height: 100vh;
-color: orange;
+/* background-color: #1f3d1f; */
   flex-wrap: wrap;
 }
 
@@ -484,7 +485,7 @@ color: orange;
   width: 100%;
   height: 70vh;
   background-color: #D6A441;
-  color: white;
+  color: black;
   display: flex;
   flex-direction: in-line;
 font-size: 30px;
@@ -501,9 +502,39 @@ padding-top: 50px;
   width: 100%;
   height: 50vh;
   
+  
+}
+
+
+.hi{
+  
+  width: 100%;
+  height: 30vh;
+  font-family: 'louiseregular';
+  font-size: 60px;
+  justify-content: center;
+  padding-top: 30px;
+  background-color: #1f3d1f;
+  text-align: center;
   color: white;
 }
 
+
+button{
+  font-family: "Space Mono", sans-serif;
+  border: solid #1f3d1f;
+  width:100px;
+  color:#F0E4D0;
+  background-color:#1f3d1f;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 30px;
+border-radius: 20px;
+}
+
+button:hover{
+  color:#D6A441;
+}
 /* Media Queries */
 
 
