--- a/css/style.css
+++ b/css/style.css
@@ -146,11 +146,12 @@ h1{
   font-family: 'louiseregular';
     font-size: 100px;
     color: #f8f6eb;
-    margin-top: 100px;
+    margin-top: 120px;
     display: flex;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
+    margin-bottom: auto;
 
     
 }
@@ -159,12 +160,13 @@ h2{
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     font-size: 30px;
-    margin-top: -70px;
+    /* margin-top: -70px; */
     padding-bottom: 60px;
     justify-content: center;
     padding-left: 20px;
     flex-wrap: wrap;
-
+    margin-bottom: 70px;
+margin-top: auto;
    
     
     color: #f8f6eb;
@@ -532,10 +534,28 @@ padding-top: 50px;
   font-size: 60px;
   justify-content: center;
   padding-top: 30px;
-  background-color: #1f3d1f;
   text-align: center;
   color: white;
+  width: 50%;
+  height: 50vh;
+ 
+  flex-wrap: wrap;
+  flex-direction: in-line;
+  display: flex;
 }
+
+
+.map{
+display: flex;
+width: 100%;
+height: 40vh;
+background-color:#1f3d1f;
+flex-wrap: wrap;
+flex-direction: in-line;
+padding-top: 20px;
+padding-bottom: 20px;
+}
+
 
 
 button{
@@ -683,7 +703,7 @@ h3{
 
 
      .mobile-container {
-        /* max-width: 475px; */
+        max-width: 480px;
         width: 100%;
         margin: auto;
         /* background-color: orange; */
@@ -699,12 +719,12 @@ h3{
     
       
       .topnav #myLinks {
-        display: none;
+        display: block;
       }
       
       .topnav a {
         color: black;
-        padding: 14px 16px;
+        padding: 0px;
         text-decoration: none;
         font-family: 'louiseregular', sans-serif;
         font-size: 17px;
@@ -734,8 +754,88 @@ h3{
         font-size: 12px;
       }
 
+      .flex-container3{
+        position: relative;
+        margin-right: 10px;
+        width: 90%;
+      }
 
 
-      
+.flex-container4{
+  position: relative;
+  margin-left: 20px;
+}
+
+  .flex-container-footer{
+    font-size: 10px;
+  }  
+  
+  .flex-item-hours{
+    display: column;
+    font-size: 10px;
+  }
+
+
+  .flex-container-footer,
+  .contact,
+  .our-story {
+      display: flex;
+      justify-content: space-around;
+      margin: 20px 0;
+  }
+
+  .hi {
+      text-align: left;
+      font-size: 32px;
+      margin: 20px 0;
+      flex-direction: column;
+
+
+  }
+
+  .map{
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #map{
+    width: 30%;
+    height: 100vh;
+  }
+
+  .our-story1 img {
+      max-width: 100%;
+      height: auto;
+  }
+
+  .flex-item-hours,
+  .flex-item-hours2,
+  .flex-item-hours3 {
+      margin: 10px;
+  }
+
+
+  .our-story, .our-story1, .our-story2, .our-story3{
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
+#coffee{
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+p{ 
+  font-size: 12px;
+}
 
     }
