--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ object-position: 50% 50%;
 }
 
 
-div.scrollmenu {
+.scrollmenu {
     
     overflow: auto;
     white-space: nowrap;
@@ -291,7 +291,7 @@ div.scrollmenu {
     background-color:#1f3d1f;
   }
   
-  div.scrollmenu a {
+  .scrollmenu a {
     display: inline-block;
     color: white;
     text-align: center;
@@ -299,15 +299,16 @@ div.scrollmenu {
     text-decoration: none;
     margin-bottom: 200px;
     padding-bottom: 100px;
+    scrollbar-color: #1f3d1f;
   }
   
-  div.scrollmenu a:hover {
-    background-color: #777;
+  .scrollmenu a:hover {
+    background-color: #1f3d1f;
   }
   
 
   
-  div.scroll {
+  .scroll {
     margin: 4px, 4px;
     padding: 4px;
    color: black;
@@ -317,6 +318,7 @@ div.scrollmenu {
     overflow-y: auto;
     text-align: justify;
     margin-top: 100px;
+    scrollbar-color: #1f3d1f;
    
 
 }
@@ -608,7 +610,7 @@ button:hover{
       width: 90%;
   }
   #coffee, #coffee-pages, #coffee-scroll {
-      width: 90%;
+      width: 100%;
       height: auto;
       justify-content: center;
       margin-left: auto;
@@ -824,9 +826,7 @@ h3{
     height: 100vh;
   }
 
-  #umbria{
-    margin-bottom: 0;
-  }
+  
 
   .our-story1 img {
       max-width: 100%;
@@ -847,6 +847,9 @@ h3{
     margin-left: auto;
     margin-right: auto;
     justify-content: space-around;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  
  
     
   
@@ -862,8 +865,8 @@ p{
 
 
 #coffee, #coffee-pages, #coffee-scroll {
-  width: 100;
-  height: auto;
+  width: 100%;
+  height: 40vh;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
