--- a/css/style.css
+++ b/css/style.css
@@ -488,8 +488,10 @@ object-position: 50% 50%;
 .our-story1{
   display: flex;
   flex-direction:column;
+  margin-top: 100px;
+  margin-bottom: 100px;
   width: 50%;
-  height: 100vh;
+  height: auto;
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
@@ -500,10 +502,11 @@ object-position: 50% 50%;
   display: flex;
   flex-direction:column;
   width: 40%;
-  height: 60vh;
+  height: auto;
 
    color: #f8f6eb;
-   margin-top: 100px;
+   margin-top:100px;
+   margin-bottom: 100px;
 
 margin-right: auto;
 text-align: center;
@@ -862,16 +865,43 @@ h3{
 
 .umbria {
     width: 100%;
-    height: 50vh;
+    height: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    display: block;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
 h3 {
     margin: 0; /* Remove top and bottom margins */
 }
 
+
+
+
 .our-story1{
-  display: none;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: auto;
+
+
 }
+
+.our-story2{
+  height: auto;
+   margin-top:auto;
+   margin-bottom: auto;
+
+}
+
+
+
+
 
   }
   
