--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a{
     /* border: solid black;
     border-radius: 20px; */
     background-color: #1f3d1f;
-    font-family: 'louiseregular';
+    font-family: 'boecklin';
 
    
 }
@@ -148,8 +148,19 @@ a{
 
 }
 
+@font-face {
+  font-family: 'boecklin';
+  src: url('../media/fonts/boecklin.ttf') format('ttf');
+  src: url('../media/fonts/boecklin.woff') format('woff');
+  font-weight: normal;
+  font-weight: normal;
+
+
+}
+
+
 h1{
-  font-family: 'louiseregular';
+  font-family: 'boecklin';
     font-size: 100px;
     color: #f8f6eb;
     margin-top: 120px;
@@ -181,7 +192,7 @@ margin-top: auto;
 }
 
 h3{
-  font-family: 'louiseregular';
+  font-family: 'boecklin';
     font-size: 60px;
    color: #1f3d1f;
     justify-content: center;
@@ -392,6 +403,7 @@ div.scrollmenu a:hover {
     text-decoration: none;
     font-size: 30px;
     display: none;
+ 
   }
   
   .topnav a.icon {
@@ -554,7 +566,7 @@ padding-top: 50px;
   
   width: 100%;
   height: 30vh;
-  font-family: 'louiseregular';
+  font-family: 'boecklin';
   font-size: 60px;
   justify-content: center;
   padding-top: 30px;
@@ -663,7 +675,7 @@ h3{
     color: black;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: 'louiseregular', sans-serif;
+    font-family: 'boecklin', sans-serif;
     font-size: 30px;
     display: block;
  
@@ -741,7 +753,7 @@ h3{
           color: black;
           padding: 0px;
           text-decoration: none;
-          font-family: 'louiseregular', sans-serif;
+          font-family: 'boecklin', sans-serif;
           font-size: 17px;
           display: block;
        
