--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,21 @@ table{
 }
 
 
+.google-map {
+  padding-bottom: 50%;
+  position: relative;
+  background-color:#1f3d1f;
+}
+
+.google-map iframe {
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+
+}
+
 .parent-container {
   width: 100%;
 }
@@ -169,6 +184,7 @@ h1{
     text-align: center;
     flex-wrap: wrap;
     margin-bottom: auto;
+  
 
     
 }
@@ -563,21 +579,21 @@ padding-top: 50px;
 
 
 .hi{
-  
-  width: 100%;
-  height: 30vh;
+
   font-family: 'boecklin';
   font-size: 60px;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 10px;
   text-align: center;
   color: white;
-  width: 50%;
-  height: 50vh;
+  width: 100%;
+  height: 20vh;
  
   flex-wrap: wrap;
   flex-direction: in-line;
   display: flex;
+  background-color:#1f3d1f;
+
 }
 
 
